--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,4 @@ edition = "2021"
 [dependencies]
 protobuf = "3.2.0"
 bytes = "1"
-
-[dev-dependencies]
-protobuf-codegen = "3.2.0"
+anyhow = "1.0.65"
