--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2021"
 protobuf = "3.2.0"
 bytes = "1"
 anyhow = "1.0.65"
+wgpu = "0.14.0"
+pollster = "0.2"
+human_bytes = { version = "0.3", features = ["bibytes"] }
+env_logger = "0.9"
+log = "0.4"
