--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ human_bytes = { version = "0.3", features = ["bibytes"] }
 env_logger = "0.9"
 log = "0.4"
 bytemuck = "1.12.1"
+tera = { version = "1.17.1", default-features = false }
+lazy_static = "1.4.0"
