Refactor as a lib + bin crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ tera = { version = "1.17.1", default-features = false }
 lazy_static = "1.4.0"
 structopt = "0.3.26"
 nom = "7.1.1"
+image = "0.24.4"
