--- a/wnn/Cargo.toml
+++ b/wnn/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-protobuf = "3.2.0"
+protobuf = "~3.2.0"
 anyhow = "1.0.65"
 wgpu = "0.14.0"
 human_bytes = { version = "0.3", features = ["bibytes"] }
